--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Icon of Wisdom</string>
+    <string name="app_name">Meal_Suggestion</string>
 </resources>
